# agent-orchestrator

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  agent_collaboration.json  generate_charts.py  humaneval_plus.md  livecodebench.md  memory_ablation.json  planning_comparison.json  run_demo.py  sota_comparison.md  swe_bench_detailed.json  swe_bench_verified.md
docker/: Dockerfile.sandbox
examples/: quickstart.py
src/agent_orchestrator/: __init__.py  audit.py  context_compression.py  critic.py  dspy_optimizer.py  evaluator.py  graph.py  planner.py  sandbox.py  test_driven.py  tree_of_thought.py
src/agent_orchestrator/agents/: __init__.py  base.py  coder.py  researcher.py  reviewer.py
src/agent_orchestrator/memory/: __init__.py  episodic.py  procedural.py  semantic.py
tests/: test_planner.py
