[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-orchestrator"
version = "0.4.1"
description = "Autonomous multi-agent system for software engineering tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "natiixnt" },
]
keywords = ["agents", "llm", "automation", "software-engineering", "mcts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.3.0",
    "docker>=7.0.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
agent-orchestrator = "agent_orchestrator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "COM", "T20"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
